--- a/main.html
+++ b/main.html
@@ -6,8 +6,11 @@
   </head>
 
   <body>
+	  <button id="download-images-button">Download Images</button>
     <!-- the entire body must be written by student -->
-    <div id="output"></div>
+    <div id="output">
+		
+	</div>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
